--- a/config.yaml
+++ b/config.yaml
@@ -7,7 +7,6 @@ mysql:
   host: 127.0.0.1
   port: 3306
   username: root
-  password: root
+  password: 123456
   charset: utf8mb4
-  prefix: douyin_
   db_name: douyin
