--- a/config.yaml.example
+++ b/config.yaml.example
@@ -6,11 +6,11 @@ server:
 mysql:
   host: 127.0.0.1
   port: 3306
-  username: root
-  password: winner0423
+  username:
+  password:
   charset: utf8mb4
   prefix: douyin_
-  db_name: douyin
+  db_name:
   
 redis:
   host: 127.0.0.1
