--- a/config.yaml.example
+++ b/config.yaml.example
@@ -15,3 +15,13 @@ mysql:
 redis:
   host: 127.0.0.1
   port: 6379
+
+
+mysql:
+  host: 127.0.0.1
+  port: 3306
+  username: root
+  password: winner0423
+  charset: utf8mb4
+  prefix: douyin_
+  db_name: douyin
